Fix typo in latency policy

The lowest latency setting wasn't applied because the internal
implementation contained an excess 'e' in comparison to the setting
exposed to the user

BUG: 453694
(cherry picked from commit d8da0c7708bc68b22c733db4dce8dea865546ce6)